--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.15.2",
     "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.12.3",
     "redux-logger": "^3.0.6",
     "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
