vercel json fix

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server.js",
-      "user": "@vercel/node"
+      "src": ".js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.js"
+      "dest": "/"
     }
   ]
 }
