--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "/server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
-  ]
+  "version": 2,
+  "builds": [{ "src": "server.js", "use": "@now/node" }],
+  "routes": [{ "src": "(.*)", "dest": "server.js" }]
 }
