--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,12 @@
 {
   "version": 2,
   "routes": [
-    { "handle": "filesystem" },
     {
       "src": "/api/(.*)",
       "dest": "server.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/*",
       "dest": "/"
     }
   ]
